--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
-    
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.1.0",
-   
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.5.0",
+    "swiper": "^8.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -39,6 +38,5 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
-    
   }
 }
